--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,6 +1,6 @@
 /*header style*/
 .header{
-    background: url("../assets/khachik-simonian-269941-unsplash.jpg");
+    background-image: url("../assets/khachik-simonian-269941-unsplash.jpg");
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
@@ -15,22 +15,8 @@
     min-width: 100%;
     left: 0;
     top: 0;
-    background: rgba(255,255,255,0.1);
+    background-color: rgba(255,255,255,0.1);
    }
-
-   /* .intro-message >h1 {
-       margin: 2;
-       text-shadow: 2px 2px 2px rgba(0,0,0,0.6);
-       font-size: 5em;
-       color: rgb(179,109,77);
-   }
-
-   .intro-message >h1 {
-    margin: 2;
-    text-shadow: 2px,2px,2px rgba(0,0,0,0.6);
-    font-size: 2em;
-    color: rgb(179, 109, 77);
-   } */
 
 .description {
     margin: auto;
