--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -1,14 +1,14 @@
-.portfolio{
+.projects{
     margin: 4em 0;
     position: relative; 
    }
-   .portfolio h1{
+   .projects h1{
     color:#4D4D53;
     text-align: center;
     font-size: 50px;
     margin: 1em; 
    }
-   .portfolio img{
+   .projects img{
      height: 15rem;
      width: 100%;
      margin: 1em;
